[tool.poetry]
name = "vectorized-value-methods"
version = "0.1.0"
description = ""
authors = [
    "Costa Huang <costa.huang@outlook.com>",
    "Niju Nicholas <niju.nicholas@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
torch = "^1.10.1"
gym = "^0.21.0"
tensorboard = "^2.7.0"
stable-baselines3 = "1.1"
pybullet = {version = "3.1.8", optional = true}
ale-py = {version = "^0.7", optional = true}
AutoROM = {version = "^0.4.2", optional = true, extras = ["accept-rom-license"]}
free-mujoco-py = {version = "^2.1.6", optional = true}
mujoco-py = {version = "^2.1.2.14", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
atari = ["ale-py", "AutoROM"]
pybullet = ["pybullet"]
free-mujoco = ["free-mujoco-py"]
mujoco-py = ["mujoco-py"]